Fix Launch Game: forward JVM module-path to child process
JavaFX requires --module-path to be set. When launching game-client.jar
from the sync app, inherit the current JVM's --module-path, --add-modules,
and --add-opens arguments so the child process can find JavaFX.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>